--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,25 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+
+public/images
+/.idea
+/.vagrant
+/nbproject
+.env.dusk.*
+.DS_Store
+Thumbs.db
+*.sublime-project
+*.sublime-workspace
+.project
+_ide_helper.php
+.phpstorm.meta.php
+composer.phar
+error.log
+output.txt
+/.vscode
+.php_cs.cache
+coverage.xml
+/coverage
+
+public/mix-manifest.json
