--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "devDependencies": {
         "axios": "^0.19",
         "cross-env": "^7.0",
+        "deepmerge": "^4.2.2",
+        "fibers": "^5.0.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
+        "sass": "^1.26.8",
         "sass-loader": "^8.0.0",
         "vue-template-compiler": "^2.6.11"
     },
@@ -24,7 +26,9 @@
         "moment": "^2.27.0",
         "sweetalert2": "^9.15.1",
         "vue": "^2.6.11",
+        "vue-recaptcha": "^1.3.0",
         "vue-router": "^3.3.4",
-        "vuetify": "^2.3.1"
+        "vuetify": "^2.3.1",
+        "vuex": "^3.4.0"
     }
 }
