--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "ext-json": "*",
         "arcanedev/no-captcha": "^11.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
