--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,17 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/passport": "^9.3",
+        "laravel/scout": "^8.2",
         "laravel/socialite": "^4.4",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "spatie/laravel-permission": "^3.13"
+        "spatie/laravel-permission": "^3.16",
+        "spatie/laravel-query-builder": "^3.0",
+        "teamtnt/laravel-scout-tntsearch-driver": "^9.0"
     },
     "require-dev": {
+        "acadea/boilerplate-local": "dev-feature/readme",
         "barryvdh/laravel-ide-helper": "^2.7",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
@@ -56,6 +61,13 @@
         }
     },
     "repositories": {
+        "dev-package": {
+            "type": "path",
+            "url": "./../packages/laravel-boilerplate-generator",
+            "options": {
+                "symlink": true
+            }
+        },
         "packagist.org": {
             "type": "composer",
             "url": "https://packagist.org"
