--- a/package.json
+++ b/package.json
@@ -32,5 +32,12 @@
         "vue-router": "^3.3.4",
         "vuetify": "^2.3.1",
         "vuex": "^3.4.0"
+    },
+    "bit": {
+        "env": {
+            "compiler": "bit.envs/compilers/vue@0.1.10"
+        },
+        "componentsDefaultDirectory": "components/{name}",
+        "packageManager": "npm"
     }
 }
