--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laravel_startup
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -26,10 +26,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=hello@startup.example
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -44,3 +44,54 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Access
+ENABLE_REGISTRATION=true
+CHANGE_EMAIL=false
+PASSWORD_HISTORY=3
+PASSWORD_EXPIRES_DAYS=3000
+
+# This should be one or the other, or neither
+REQUIRES_APPROVAL=false
+CONFIRM_EMAIL=true
+#//
+
+# Get your credentials at: https://www.google.com/recaptcha/admin
+REGISTRATION_CAPTCHA_STATUS=false
+NOCAPTCHA_SITEKEY=
+NOCAPTCHA_SECRET=
+
+# Socialite Providers
+FACEBOOK_ACTIVE=false
+#FACEBOOK_CLIENT_ID=
+#FACEBOOK_CLIENT_SECRET=
+#FACEBOOK_REDIRECT=${APP_URL}/login/facebook/callback
+
+BITBUCKET_ACTIVE=false
+#BITBUCKET_CLIENT_ID=
+#BITBUCKET_CLIENT_SECRET=
+#BITBUCKET_REDIRECT=${APP_URL}/login/bitbucket/callback
+
+GITHUB_ACTIVE=false
+#GITHUB_CLIENT_ID=
+#GITHUB_CLIENT_SECRET=
+#GITHUB_REDIRECT=${APP_URL}/login/github/callback
+
+GOOGLE_ACTIVE=false
+#GOOGLE_CLIENT_ID=
+#GOOGLE_CLIENT_SECRET=
+#GOOGLE_REDIRECT=${APP_URL}/login/google/callback
+
+LINKEDIN_ACTIVE=false
+#LINKEDIN_CLIENT_ID=
+#LINKEDIN_CLIENT_SECRET=
+#LINKEDIN_REDIRECT=${APP_URL}/login/linkedin/callback
+
+TWITTER_ACTIVE=false
+#TWITTER_CLIENT_ID=
+#TWITTER_CLIENT_SECRET=
+#TWITTER_REDIRECT=${APP_URL}/login/twitter/callback
+
+SCOUT_DRIVER=tntsearch
+TNTSEARCH_FUZZINESS=true
+TNTSEARCH_BOOLEAN=false
