--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4.9",
+        "php": "^7.4",
         "ext-json": "*",
         "arcanedev/no-captcha": "^11.0",
         "fideloper/proxy": "^4.2",
@@ -29,6 +29,7 @@
         "barryvdh/laravel-ide-helper": "^2.7",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
+        "laracasts/cypress": "^1.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
