--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.4",
         "ext-json": "*",
+        "arcanedev/log-viewer": "^7.0",
         "arcanedev/no-captcha": "^11.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
