--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,20 @@
     "require": {
         "php": "^7.4",
         "ext-json": "*",
-        "arcanedev/log-viewer": "^7.0",
-        "arcanedev/no-captcha": "^11.0",
+        "arcanedev/log-viewer": "^8.0.1",
+        "arcanedev/no-captcha": "^12.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^7.0",
-        "laravel/passport": "^9.3",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/framework": "^8.0",
+        "laravel/passport": "^10.0",
         "laravel/scout": "^8.2",
-        "laravel/socialite": "^4.4",
+        "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
+        "laravel/ui": "^3.0",
         "spatie/laravel-permission": "^3.16",
         "spatie/laravel-query-builder": "^3.0",
-        "teamtnt/laravel-scout-tntsearch-driver": "^9.0"
+        "teamtnt/laravel-scout-tntsearch-driver": "^10.0"
     },
     "require-dev": {
         "acadea/boilerplate-generator": "dev-feature/readme",
@@ -32,8 +32,8 @@
         "fzaninotto/faker": "^1.9.1",
         "laracasts/cypress": "^1.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -47,12 +47,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ],
         "files": [
             "app/helpers.php"
         ]
