--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@mdi/font": "^5.3.45",
+        "@vue/composition-api": "^1.0.0-beta.21",
         "moment": "^2.27.0",
         "sweetalert2": "^9.15.1",
         "vue": "^2.6.11",
