--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "require-dev": {
         "acadea/boilerplate-generator": "dev-feature/readme",
         "barryvdh/laravel-ide-helper": "^2.7",
+        "behat/behat": "^3.8",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "laracasts/cypress": "^1.1",
