--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "laracasts/cypress": "^1.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "spatie/phpunit-watcher": "^1.23"
     },
     "config": {
         "optimize-autoloader": true,
@@ -78,6 +79,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "watch-test": [
+            "vendor/bin/phpunit-watcher watch"
+        ],
         "behat": [
             "vendor/bin/behat"
         ],
