added request helper, deving test for change profile pic

--- a/composer.json
+++ b/composer.json
@@ -79,7 +79,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
-        "watch-test": [
+        "test:watch": [
             "vendor/bin/phpunit-watcher watch"
         ],
         "behat": [
