--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "laravel/ui": "^3.0",
         "spatie/laravel-permission": "^3.16",
         "spatie/laravel-query-builder": "^3.0",
-        "teamtnt/laravel-scout-tntsearch-driver": "^10.0"
+        "teamtnt/laravel-scout-tntsearch-driver": "^10.0",
+        "torann/geoip": "^3.0"
     },
     "require-dev": {
         "acadea/boilerplate-generator": "dev-feature/readme",
