--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.0",
+        "sempro/phpunit-pretty-print": "^1.3",
         "spatie/phpunit-watcher": "^1.23"
     },
     "config": {
