--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.5",
+        "laravel/fortify": "^1.7",
         "laravel/framework": "^8.0",
         "laravel/scout": "^8.2",
         "laravel/socialite": "^5.0",
