added sanctum, refactoring auth logic

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_SECURE_COOKIE=true
+SESSION_DOMAIN=.dev.local
+
+SANCTUM_STATEFUL_DOMAINS=.dev.local
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -95,3 +99,5 @@ TWITTER_ACTIVE=false
 SCOUT_DRIVER=tntsearch
 TNTSEARCH_FUZZINESS=true
 TNTSEARCH_BOOLEAN=false
+
+
