--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "intervention/image": "^2.5",
         "laravel/fortify": "^1.7",
         "laravel/framework": "^8.0",
+        "laravel/sanctum": "^2.8",
         "laravel/scout": "^8.2",
         "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.0",
