--- a/composer.json
+++ b/composer.json
@@ -55,10 +55,10 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
+            "Database\\Factories\\Helpers\\": "database/factories/helpers",
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/helpers.php"
         ]
     },
     "autoload-dev": {
